# privacy-protection-application

./: ATTRIBUTION.txt  CMakeLists.txt  Doxyfile  README.md  RELEASE-NOTES.txt  ThirdPartyLicenses.txt  build_postgis.sh  build_ppa.sh  package.json  run_osm_convert.sh  run_postgis.sh  run_ppa.sh  run_test.sh
cl-tool/: CMakeLists.txt
cl-tool/include/: config.hpp  di_multi.hpp  multi_thread.hpp  shrp2type.hpp  tool.hpp
cl-tool/src/: config.cpp  cv_di.cpp  di_multi.cpp  shrp2type.cpp  tool.cpp
cv-gui-electron/: CMakeLists.txt  app.js  main.css  main.html  main.js  package.json
cv-gui-electron/_locales/en/: messages.json
cv-gui-electron/cpp/include/: cvdi.hpp  multi_thread.hpp
cv-gui-electron/cpp/src/: cvdi_driver.cc  cvdi_nm.cc
cv-gui-electron/images/: cvdi.icns  icon_128.xcf  route-sanitizer-new.xcf
cv-gui-electron/js/: cvdi.js  gui.js  localization.js
cv-gui-electron/js/libraries/jbox/: jBox.css
cv-gui-electron/tabs/: adv_config.html  adv_config.js  config.css  config.html  config.js  files.css  files.html  files.js  google_maps.html  map.css  map.html  map.js  osm.css  osm.html  osm.js  shared_config.js  welcome.css  welcome.html  welcome.js
cv-lib/: CMakeLists.txt  cvlib.hpp.in
cv-lib-test/: CMakeLists.txt
cv-lib-test/src/: tests.cpp
cv-lib/include/: bsmp1.hpp  critical.hpp  entity.hpp  error.hpp  instrument.hpp  kml.hpp  mapfit.hpp  names.hpp  osm.hpp  privacy.hpp  quad.hpp  shapes.hpp  tracktypes.hpp  trajectory.hpp  utilities.hpp
cv-lib/src/: bsmp1.cpp  critical.cpp  entity.cpp  error.cpp  instrument.cpp  kml.cpp  mapfit.cpp  osm.cpp  privacy.cpp  quad.cpp  shapes.cpp  tracktypes.cpp  trajectory.cpp  util.cpp  utilities.cpp
docs/: cvdi-user-manual.md
docs/src-docs/html/: android__sink_8h_source.html  annotated.html  ansicolor__sink_8h_source.html  async__log__helper_8h_source.html  async__logger_8h_source.html  async__logger__impl_8h_source.html  base__sink_8h_source.html  classMultiThread_1_1Parallel-members.html  classMultiThread_1_1Parallel.html  classMultiThread_1_1SharedQueue-members.html  classMultiThread_1_1SharedQueue.html  classconfig_1_1Config-members.html  classconfig_1_1Config.html  classcvdi_1_1AreaFitter-members.html  classcvdi_1_1AreaFitter.html  classcvdi_1_1IntersectionCounter-members.html  classcvdi_1_1IntersectionCounter.html  classcvdi_1_1PrivacyIntervalFinder-members.html  classcvdi_1_1PrivacyIntervalFinder.html  classcvdi_1_1StartEndIntervals-members.html  classcvdi_1_1StartEndIntervals.html  classcvdi_1_1Stop-members.html  classcvdi_1_1Stop.html  classcvdi_1_1Stop_1_1Deque-members.html  classcvdi_1_1Stop_1_1Deque.html  classcvdi_1_1TurnAround-members.html  classcvdi_1_1TurnAround.html  classcvdi__multi_1_1BatchParallel-members.html  classcvdi__multi_1_1BatchParallel.html  classcvdi__multi_1_1CVDIParallel-members.html  classcvdi__multi_1_1CVDIParallel.html  classcvdi__multi_1_1FileInfo-members.html  classcvdi__multi_1_1FileInfo.html  classcvdi__multi_1_1SingleBatchParallel-members.html  classcvdi__multi_1_1SingleBatchParallel.html  classcvdi__multi_1_1SingleFileInfo-members.html  classcvdi__multi_1_1SingleFileInfo.html  classes.html  classfmt_1_1ArgFormatter-members.html  classfmt_1_1ArgFormatter.html  (+389 more)
docs/src-docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  (+61 more)
docs/src-docs/latex/: annotated.tex  classMultiThread_1_1Parallel.tex  classMultiThread_1_1SharedQueue.tex  classconfig_1_1Config.tex  classcvdi_1_1AreaFitter.tex  classcvdi_1_1IntersectionCounter.tex  classcvdi_1_1PrivacyIntervalFinder.tex  classcvdi_1_1StartEndIntervals.tex  classcvdi_1_1Stop.tex  classcvdi_1_1Stop_1_1Deque.tex  classcvdi_1_1TurnAround.tex  classcvdi__multi_1_1BatchParallel.eps  classcvdi__multi_1_1BatchParallel.tex  classcvdi__multi_1_1CVDIParallel.eps  classcvdi__multi_1_1CVDIParallel.tex  classcvdi__multi_1_1FileInfo.eps  classcvdi__multi_1_1FileInfo.tex  classcvdi__multi_1_1SingleBatchParallel.eps  classcvdi__multi_1_1SingleBatchParallel.tex  classcvdi__multi_1_1SingleFileInfo.eps  classcvdi__multi_1_1SingleFileInfo.tex  classfmt_1_1ArgFormatter.eps  classfmt_1_1ArgFormatter.tex  classfmt_1_1ArgList.tex  classfmt_1_1ArgVisitor.tex  classfmt_1_1BasicArgFormatter.eps  classfmt_1_1BasicArgFormatter.tex  classfmt_1_1BasicArrayWriter.eps  classfmt_1_1BasicArrayWriter.tex  classfmt_1_1BasicCStringRef.tex  classfmt_1_1BasicFormatter.eps  classfmt_1_1BasicFormatter.tex  classfmt_1_1BasicMemoryWriter.eps  classfmt_1_1BasicMemoryWriter.tex  classfmt_1_1BasicStringRef.tex  classfmt_1_1BasicWriter.eps  classfmt_1_1BasicWriter.tex  classfmt_1_1Buffer.eps  classfmt_1_1Buffer.tex  classfmt_1_1BufferedFile.tex  (+212 more)
example-data/config/: ppa_config.ini  road_config.json
map/: Dockerfile  host_import.sh  import.sh  start_db.sh
map/tools/: osm2ways.py  road-types.json  ways2bfmap.py
ppa-src/: CMakeLists.txt  Dockerfile
ppa-src/cvdi/: CMakeLists.txt
ppa-src/cvdi-cl/: CMakeLists.txt
ppa-src/cvdi-cl/include/: config.hpp  cvdi_multi.hpp  multi_thread.hpp
ppa-src/cvdi-cl/src/: config.cpp  cvdi_multi.cpp
ppa-src/cvdi/include/: cvdi.hpp
ppa-src/cvdi/src/: cvdi.cpp
ppa-src/geo/: CMakeLists.txt
ppa-src/geo-data/: CMakeLists.txt
ppa-src/geo-data/include/: geo_data.hpp
ppa-src/geo-data/src/: geo_data.cpp
ppa-src/geo/include/: geo.hpp
ppa-src/geo/src/: geo.cpp
ppa-src/hmm-mm/: CMakeLists.txt
ppa-src/hmm-mm/include/: hmm_mm.hpp
ppa-src/hmm-mm/src/: hmm_mm.cpp
ppa-src/osm-cl/: CMakeLists.txt
ppa-src/osm-cl/src/: osm_map.cpp
ppa-src/test/: CMakeLists.txt
ppa-src/test/data/: utk.config  utk.edges  utk_err_test.csv  utk_test.csv
ppa-src/test/src/: test.cpp
ppa-src/tool/: CMakeLists.txt
ppa-src/tool/include/: tool.hpp
ppa-src/tool/src/: tool.cpp
ppa-src/util/: CMakeLists.txt
ppa-src/util/include/: util.hpp
ppa-src/util/src/: util.cpp
unit-test-data/lib-test-data/: utk.config  utk.quad  utk_err_test.csv
